[package]
name = "rust-money"
version = "0.1.0"
authors = ["CleÌment Lavergne-Prudence <lavergne.clement@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[features]
default = []
wasmbind = ["console_error_panic_hook"]
